meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__disk__test__get_disk_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/disk.rs
expression: metrics
---
[
  {
    "name": "diskstats/mmcblk0/lifetime_pct",
    "value": {
      "Gauge": {
        "value": 90.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/lifetime_b_pct",
    "value": {
      "Gauge": {
        "value": 85.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/bytes_written",
    "value": {
      "Counter": {
        "value": 512000.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/name",
    "value": {
      "ReportTag": {
        "value": "SG123",
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/manufacturer_id",
    "value": {
      "ReportTag": {
        "value": "0x00015",
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/total_size_bytes",
    "value": {
      "Gauge": {
        "value": 51200.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/manufacture_date",
    "value": {
      "ReportTag": {
        "value": "11/2023",
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/revision",
    "value": {
      "ReportTag": {
        "value": "1.0",
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "diskstats/mmcblk0/serial",
    "value": {
      "ReportTag": {
        "value": "0x1234567890",
        "timestamp": "[timestamp]"
      }
    }
  }
]
